[tests] convert integration test to assertj
Intent of the test is more readable in code and some failed assertions
should give nicer error messages now.